--- a/python_scripts.yml
+++ b/python_scripts.yml
@@ -2,6 +2,7 @@
 - name: checkout python scripts
   hosts: openhabian
   become: true
+  remote_user: openhabian
   
   vars:
    home_dir: "/home/openhabian"
