--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -2,12 +2,13 @@
 - hosts: openhabian
   become: true
   become_method: sudo
+  remote_user: openhabian
   vars:
     rabbitmq_version: 3.0.2-1
 
   tasks:
-  - name: ensure software-properties-common is installed
-    apt: pkg=software-properties-common state=installed
+  - name: ensure python-software-properties is installed
+    apt: pkg=python-software-properties state=installed
 
   - name: add rabbitmq official apt repository
     apt_repository: repo='deb http://www.rabbitmq.com/debian/ testing main' state=present
@@ -26,9 +27,10 @@
     - restart rabbitmq
 
   - name: add users
-    rabbitmq_user: user={{item}} password=ultra tags=administrator,{{item}} vhost=/ configure_priv=.* write_priv=.* read_priv=.* state=present
+    rabbitmq_user: user={{item.username}} password={{item.password}} tags=administrator,{{item.username}} vhost=/ configure_priv=.* write_priv=.* read_priv=.* state=present
     with_items:
-    - ultra
+    - { username: user1, password: changeme }
+    - { username: user2, password: changeme }
 
   - name: remove default guest user
     rabbitmq_user: user=guest state=absent
