--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -8,7 +8,7 @@
 
   tasks:
   - name: ensure python-software-properties is installed
-    apt: pkg=python-software-properties state=installed
+    apt: pkg=python-software-properties state=present
 
   - name: add rabbitmq official apt repository
     apt_repository: repo='deb http://www.rabbitmq.com/debian/ testing main' state=present
@@ -17,7 +17,7 @@
     apt_key: url=https://www.rabbitmq.com/rabbitmq-signing-key-public.asc state=present
 
   - name: install package
-    apt: name={{ item }} update_cache=yes state=installed
+    apt: name={{ item }} update_cache=yes state=present
     with_items:
       - rabbitmq-server
 
