--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -8,13 +8,18 @@
 
   tasks:
   - name: add rabbitmq official apt repository
-    apt_repository: repo='deb http://www.rabbitmq.com/debian/ testing main' state=present
+    apt_repository: 
+      repo='deb http://www.rabbitmq.com/debian/ testing main'
+      state=present
 
   - name: add trusted key
-    apt_key: url=https://www.rabbitmq.com/rabbitmq-signing-key-public.asc state=present
+    apt_key: url=https://www.rabbitmq.com/rabbitmq-signing-key-public.asc 
+    state=present
 
   - name: install package
-    apt: name={{ item }} update_cache=yes state=present
+    apt: name={{ item }} 
+      update_cache=yes 
+      state=present
     with_items:
       - rabbitmq-server
 
