--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -13,13 +13,10 @@
       state=present
 
   - name: add trusted key
-    apt_key: url=https://www.rabbitmq.com/rabbitmq-signing-key-public.asc 
-    state=present
+    apt_key: url=https://www.rabbitmq.com/rabbitmq-signing-key-public.asc state=present
 
   - name: install package
-    apt: name={{ item }} 
-      update_cache=yes 
-      state=present
+    apt: name={{ item }} update_cache=yes state=present
     with_items:
       - rabbitmq-server
 
