--- a/rabbitmq.yml
+++ b/rabbitmq.yml
@@ -30,15 +30,26 @@
   - name: add users
     rabbitmq_user: user={{item.username}} password={{item.password}} tags=administrator,{{item.username}} vhost=/ configure_priv=.* write_priv=.* read_priv=.* state=present
     with_items:
-    - { username: user1, password: changeme }
-    - { username: user2, password: changeme }
+    - { username: writer, password: writer }
+    - { username: reader, password: reader }
+    - { username: ultra, password: ultra }
 
   - name: remove default guest user
-    rabbitmq_user: user=guest state=absent
-
+     rabbitmq_user: user=guest state=absent
+  - rabbitmq_exchange:
+      name: inbound
+      login_user: ultra
+      login_password: ultra
+      login_host: openhabianpi
   - name: ensure vhost /test is present
-    rabbitmq_vhost: name=/test state=present
+      rabbitmq_vhost: name=/test state=present
 
+    - rabbitmq_queue:
+    name: myRemoteQueue
+    login_user: ultra
+    login_password: ultra
+    login_host: openhabianpi
+    
   handlers:
   - name: restart rabbitmq
     service: name=rabbitmq-server state=restarted
